syntax = "proto3";

package replayapi_iam;

option go_package = "generated/iam;iam";

message ValidateRIDRequest {
  string rid_token = 1;
  string operation_id = 2;
}

// ResourceOwner contains the verified identity extracted from the RID token.
// This is the single source of truth for user identity â€” no additional
// headers should be needed to determine who the caller is.
message ResourceOwner {
  string tenant_id = 1;
  string client_id = 2;
  string group_id = 3;
  string user_id = 4;
}

message ValidateRIDResponse {
  bool is_valid = 1;
  ResourceOwner resource_owner = 2;
  int32 intended_audience = 3;
  string reason = 4;
}

service RIDService {
  rpc ValidateRID (ValidateRIDRequest) returns (ValidateRIDResponse);
}